Configured POM